--- a/tower-defence.csproj
+++ b/tower-defence.csproj
@@ -1,4 +1,4 @@
-﻿<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -6,8 +6,9 @@
     <OutputType>Exe</OutputType>
     <NoStandardLibraries>false</NoStandardLibraries>
     <AssemblyName>ConsoleApplication</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <LangVersion>9</LangVersion>
   </PropertyGroup>
@@ -20,6 +21,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <RootNamespace>tower_defence</RootNamespace>
@@ -44,10 +47,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="AI_TowerDefense\.DS_Store" />
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AI_TowerDefense\AI_Strategy\AbstractStrategy.cs" />
+    <Compile Include="AI_TowerDefense\AI_Strategy\GongiSoldier.cs" />
+    <Compile Include="AI_TowerDefense\AI_Strategy\GongiStrat3.cs" />
+    <Compile Include="AI_TowerDefense\AI_Strategy\GongiStrat2.cs" />
     <Compile Include="AI_TowerDefense\AI_Strategy\MySoldier.cs" />
+    <Compile Include="AI_TowerDefense\AI_Strategy\GongiStrat.cs" />
     <Compile Include="AI_TowerDefense\AI_Strategy\RandomStrategy.cs" />
     <Compile Include="AI_TowerDefense\AI_Strategy\RandomStrategyLoggerDemo.cs" />
     <Compile Include="AI_TowerDefense\AI_Strategy\TowerPlacementTestStrategy.cs" />
@@ -57,6 +65,7 @@
     <Compile Include="AI_TowerDefense\GameFramework\Player.cs" />
     <Compile Include="AI_TowerDefense\GameFramework\PlayerLane.cs" />
     <Compile Include="AI_TowerDefense\GameFramework\Soldier.cs" />
+    <Compile Include="AI_TowerDefense\AI_Strategy\GongiTower.cs" />
     <Compile Include="AI_TowerDefense\GameFramework\Tower.cs" />
     <Compile Include="AI_TowerDefense\GameFramework\Unit.cs" />
     <Compile Include="AI_TowerDefense\Program.cs" />
