--- a/tower-defence.csproj
+++ b/tower-defence.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="AI_TowerDefense\AI_Strategy\AbstractStrategy.cs" />
     <Compile Include="AI_TowerDefense\AI_Strategy\GongiSoldier.cs" />
+    <Compile Include="AI_TowerDefense\AI_Strategy\CounterStratSpear.cs" />
     <Compile Include="AI_TowerDefense\AI_Strategy\GongiStrat4.cs" />
     <Compile Include="AI_TowerDefense\AI_Strategy\GongiStrat3.cs" />
     <Compile Include="AI_TowerDefense\AI_Strategy\GongiStrat2.cs" />
